Bug 1558554 - Properly detect low-commit space scenarios on Windows r=dmajor

This uses GetPerformanceInformation() to measure how much commit space is
available globally. Previously we relied on GlobalMemoryStatusEx() but in
spite of the function name the commit-space values it returns are
*per process* and thus unreliable. Available physical memory measurement has
also been removed since it was never used and we don't plan on using it
anytime soon.

Differential Revision: https://phabricator.services.mozilla.com/D35018